feat(docs): 重构文档结构并更新为Pig4Cloud相关配置
删除了Mintlify相关的模板文件和配置，更新为Pig4Cloud微服务开发平台的文档内容。主要变更包括：

1. 删除所有Mintlify模板文件和示例API文档
2. 更新docs.json配置文件，简化导航结构并修改为Pig4Cloud相关设置
3. 重写introduction.mdx文档，介绍Pig4Cloud平台特性
4. 更新logo和链接指向Pig4Cloud官网和GitHub仓库
5. 调整全局样式和配色方案

此次重构为项目定制了专属文档结构，移除了不必要的模板内容，使文档更贴合Pig4Cloud平台实际情况。

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,20 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Pig4Cloud 文档
+description: "Pig4Cloud 微服务快速开发平台官方文档"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+# Pig4Cloud 微服务开发平台
 
-## Setting up
+Pig4Cloud 是基于 Spring Cloud 的微服务快速开发平台，致力于提供稳定、高效、安全的企业级应用开发框架。
 
-The first step to world-class documentation is setting up your editing environments.
+## 主要特性
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+- 基于 Spring Boot 和 Spring Cloud，遵循微服务设计原则
+- 完善的安全体系和权限管理
+- 内置丰富的企业级应用组件
+- 支持分布式事务和服务治理
+- 前后端分离架构，友好的开发体验
 
-## Make it yours
+## 快速开始
 
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+请访问我们的 [GitHub 仓库](https://github.com/pig4cloud) 获取最新代码和详细文档。
