feat(docs): restructure documentation and add new content
This commit introduces a comprehensive restructuring of the documentation for the Pig4Cloud microservices platform. Key changes include:

1. Addition of new documentation files, including 'done.txt' and 'docs-rule.mdc', outlining the documentation structure and rules.
2. Updates to existing documents, enhancing clarity and organization, particularly in '常见问题.md' and '开发-快速开始.md'.
3. Removal of outdated files such as '导出报告.md' and the old '学习资料.md', replaced with a new '学习资料.mdx' for better formatting and content.
4. Introduction of metadata sections in various documents to standardize formatting and improve navigation.

These changes aim to provide a clearer, more user-friendly documentation experience for developers and contributors.

--- a/docs/前言/参与开发.mdx
+++ b/docs/前言/参与开发.mdx
@@ -1,13 +1,12 @@
-## **参与贡献，反馈社区**
-****
+---
+title: "参与开发"
+---
 
-我们非常欢迎您的贡献和加入，无论是微不足道的清理或大的新功能。我们希望通过每一位用户参与到 pig 的功能开发中，**「****共同打造完美的微服务解决方案****」**。  
+## 参与贡献，反馈社区
 
-
+我们非常欢迎您的贡献和加入，无论是微不足道的清理或大的新功能。我们希望通过每一位用户参与到 pig 的功能开发中，**「共同打造完美的微服务解决方案」**。  
 
 当然代码不是唯一贡献方式。我们非常重视文档、与其他项目的集成，并欣然接受这些方面的改进。
-
-
 
 ## 贡献福利
 #### 1. Gitee 获取 GVP 项目标识
@@ -17,72 +16,46 @@
 ![](https://cdn.nlark.com/yuque/0/2021/png/283679/1625898761016-c616723d-fdeb-4ef8-9854-83f8da19943b.png)
 
 #### 3. 优秀贡献者奖励定制周边福利
-:::success
+<Note>
 如下图为第一期发放给贡献者的**定制水杯**
-
-:::
+</Note>
 
 ![](https://cdn.nlark.com/yuque/0/2021/png/283679/1627972504246-8b82f0f4-43aa-42cd-9789-9db29acb8d8b.png)![](https://cdn.nlark.com/yuque/0/2021/png/283679/1627972520920-7427ce21-61ee-4f49-9a1c-f26227c29166.png)
 
-
-
 #### 4. 定期线下面基福利，冷冷请客（北京）
-:::success
+<Note>
 核心贡献者线下**约码**交流
-
-:::
+</Note>
 
 ![](https://cdn.nlark.com/yuque/0/2021/png/283679/1628040128164-36304817-95ed-4a06-8ebe-9be0f1413cb9.png)
 
-## **如何贡献**
-
+## 如何贡献
 
 #### 1. fork 代码到您的仓库
 
-
-  浏览器访问: [https://gitee.com/log4j/pig](https://gitee.com/log4j/pig)
-
-
+浏览器访问: [https://gitee.com/log4j/pig](https://gitee.com/log4j/pig)
 
 ![](https://cdn.nlark.com/yuque/0/2020/jpeg/283679/1604289479920-db45d776-fcba-44ca-b084-d32549207af6.jpeg)
 
-
-
 ![](https://cdn.nlark.com/yuque/0/2020/jpeg/283679/1604289479767-5b2a63af-247d-49e0-b17b-d1898ff5ed02.jpeg)
 
-
-
 #### 2. clone 您仓库中的pig 到本地
-
 
 ```shell
 git clone https://gitee.com/{您的用户名}/pig.git
 ```
 
-
-
 ![](https://cdn.nlark.com/yuque/0/2020/jpeg/283679/1604289468858-e0c47103-4a6a-4b05-a97b-57eb86880d66.jpeg)
 
-
-
 #### 3. 修改代码并提交
-#### 
-#### 4. 提交 pull request 至我们DEV 分支
 
+#### 4. 提交 pull request 至我们DEV 分支
 
 ![](https://cdn.nlark.com/yuque/0/2020/jpeg/283679/1604289390693-e0b22e84-49e0-4c08-a584-b94225abf918.jpeg)
 
-
-
 ![](https://cdn.nlark.com/yuque/0/2020/jpeg/283679/1604289390759-6aadfd05-d6a9-4285-9936-9c1fb051c83b.jpeg)
 
-
-
 ![](https://cdn.nlark.com/yuque/0/2020/jpeg/283679/1604289390698-e3797238-6aaf-40d8-942d-6d1c88bb9e8f.jpeg)
-
-
-
-### 
 
 
 
