feat(docs): add new gateway configuration documentation
This commit introduces several new documentation files related to gateway functionality, including routing configuration, CORS setup, rate limiting, and timeout handling. Key additions include:

1. New guides on gateway routing and configuration for cross-origin resource sharing (CORS).
2. Documentation on rate limiting strategies and timeout configurations for improved service reliability.
3. Enhanced clarity and organization in existing documents, with updated formatting and metadata.

These updates aim to provide comprehensive guidance for developers working with the Pig4Cloud gateway, improving the overall documentation experience.

--- a/docs/后端开发/网关功能/网关路由配置.mdx
+++ b/docs/后端开发/网关功能/网关路由配置.mdx
@@ -1,20 +1,14 @@
-
-
-
+---
+title: "网关路由配置"
+---
 
 Pig 3.0 采用的是spring官方的网关组件，通过异步背压的高性能网关。路由配置是整个微服务中最为核心的功能
 
-
-
 ### ① 配置路由解释
 
-
-:::warning
+<Warning>
 访问 nacos /pig-gateway-dev.yml 我们以UPMS 的路由为例子，注意注释
-
-:::
-
-
+</Warning>
 
 ```yaml
 spring:
@@ -28,14 +22,9 @@ spring:
         - Path=/admin/**  #所有业务的请求前缀，会在② 中自动去除
 ```
 
-
-
 ### ② 全局的路由过滤器
 
-
-PigRequestGlobalFilter,对全部的微服务提供了安全过滤（这个后边会讲）和全局StripPrefix=1配置，**意味着你在使用Pig的时候，****<font style="color:#E8323C;">网关转发到业务模块时候会自动截取前缀</font>****，不用再每个微服务路由配置了StripPrefixFilter**
-
-
+PigRequestGlobalFilter,对全部的微服务提供了安全过滤（这个后边会讲）和全局StripPrefix=1配置，**意味着你在使用Pig的时候，网关转发到业务模块时候会自动截取前缀，不用再每个微服务路由配置了StripPrefixFilter**
 
 ```java
 public class PigRequestGlobalFilter implements GlobalFilter, Ordered {
