--- a/docs/后端开发/网关功能/网关超时及异常处理.mdx
+++ b/docs/后端开发/网关功能/网关超时及异常处理.mdx
@@ -1,11 +1,12 @@
+---
+title: "网关超时及异常处理"
+---
+
 ### 网关超时配置
 
+路由超时配置可以为所有路由配置Http超时（响应和连接），并为每个特定路由覆盖Http超时。
 
-<font style="color:rgb(51, 51, 51);background-color:rgb(251, 251, 251);">路由超时配置可以为所有路由配置Http超时（响应和连接），并为每个特定路由覆盖Http超时。</font>
-
-#### 
 #### ① 配置全局路由超时时间
-
 
 ```yaml
 spring:
@@ -16,16 +17,11 @@ spring:
         response-timeout: 10s
 ```
 
-
-
-+ <font style="color:rgb(85, 85, 85);background-color:rgb(238, 238, 238);">connect-timeout</font><font style="color:rgb(51, 51, 51);background-color:rgb(251, 251, 251);"> 必须以毫秒为单位指定连接超时时间.</font>
-+ <font style="color:rgb(85, 85, 85);background-color:rgb(238, 238, 238);">  response-timeout</font><font style="color:rgb(51, 51, 51);background-color:rgb(251, 251, 251);"> 必须指定为java.time.Duration</font>
-
-<font style="color:rgb(51, 51, 51);background-color:rgb(251, 251, 251);"></font>
++ `connect-timeout` 必须以毫秒为单位指定连接超时时间.
++ `response-timeout` 必须指定为java.time.Duration
 
 #### ②  特定接口配置超时时间
 ```yaml
-
 - id: pig-upms      # 唯一的服务ID
   uri: lb://pig-upms # 注册中心的服务名称，实现负载均衡
   predicates:
@@ -35,16 +31,12 @@ spring:
     connect-timeout: 200
 ```
 
+可以通过路由的metadata以下两个参数配置每个路由超时：
 
++ `connect-timeout` 必须以毫秒为单位指定连接超时时间.
++ `response-timeout` 必须以毫秒为单位指定响应超时时间.
 
-<font style="color:rgb(51, 51, 51);">可以通过路由的metadata以下两个参数配置每个路由超时：</font>
-
-+ <font style="color:rgb(85, 85, 85);background-color:rgb(238, 238, 238);">connect-timeout</font><font style="color:rgb(51, 51, 51);"> 必须以毫秒为单位指定连接超时时间.</font>
-+ <font style="color:rgb(85, 85, 85);background-color:rgb(238, 238, 238);"> response-timeout</font><font style="color:rgb(51, 51, 51);"> 必须以毫秒为单位指定响应超时时间.</font>
-
-### 
 ### 网关统一异常包装
-
 
 ![](https://cdn.nlark.com/yuque/0/2022/png/283679/1648737466095-60dcf5e3-2997-469f-821c-3244c63ef220.png)
 
