--- a/docs/后端开发/网关功能/网关限流使用.mdx
+++ b/docs/后端开发/网关功能/网关限流使用.mdx
@@ -1,9 +1,10 @@
+---
+title: "网关限流使用"
+---
+
 ### ① pom 依赖
 
-
 这里一定要注意，是网关引入的redis-reactive，背压模式的redis。
-
-
 
 ```xml
 <!--基于 reactive stream 的redis -->
@@ -13,10 +14,7 @@
 </dependency>
 ```
 
-
-
 ### ② 配置按照请求IP 的限流
-
 
 ```yaml
 spring:
@@ -37,11 +35,7 @@ spring:
         - StripPrefix=1
 ```
 
-
-
 + 配置bean，多维度限流量的入口 对应上边key-resolver
-
-
 
 ```java
 /**
@@ -54,58 +48,33 @@ KeyResolver remoteAddrKeyResolver() {
 }
 ```
 
-
-
 OK 完成。
-
-
 
 ### ③ 压力测试
 
-
 并发5个线程。
-
-
 
 ![](https://cdn.nlark.com/yuque/0/2020/png/283679/1599233764585-8327c654-6a5c-4d0b-988c-4a49d471ba50.png)
 
-
-
 #### Redis 数据变化
 
-
 我们使用redis的**monitor** 命令，实时查看redis 的操作情况。
-
 会发现在redis中会操作两个key
-
-
 
 + request_rate_limiter.{xxx}.timestamp
 + request_rate_limiter.{xxx}.tokens
 
-
-
 ![](https://cdn.nlark.com/yuque/0/2020/png/283679/1599233764836-2717d832-4280-4d91-8388-735290dee014.png)
-
-
 
 ### ④ 实现原理
 
-
 ![](https://cdn.nlark.com/yuque/0/2020/png/283679/1599233764602-841306eb-7fdb-48ea-961f-3041abcb4908.png)
-
-
 
 Spring Cloud Gateway 默认实现 Redis限流，如果扩展只需要实现ratelimter接口即可。
 
-
-
 ##### 核心代码
 
-
 + 判断是否取到令牌的实现，通过调用 redis的LUA 脚本。
-
-
 
 ```java
 public Mono<Response> isAllowed(String routeId, String id) {
@@ -144,9 +113,8 @@ public Mono<Response> isAllowed(String routeId, String id) {
 }
 ```
 
-#### 
 ##### LUA 脚本
 
-
 ![](https://cdn.nlark.com/yuque/0/2020/png/283679/1599233764816-87e979fc-c306-43e5-bb76-35c432a1cc5f.png)
+
 
