feat(docs): enhance documentation with new guides and metadata updates
This commit introduces several new documentation files and updates existing ones to improve clarity and organization. Key changes include:

1. New guides on using Sentinel traffic control, Pig OSS file uploads, and SysLog annotation usage.
2. Added metadata sections to enhance document structure and navigation.
3. Updated existing documents to include clearer explanations and warnings regarding token generation and user retrieval.
4. Introduced new files for accessing the current user in services and exposing APIs directly.

These enhancements aim to provide comprehensive support for developers using the Pig4Cloud platform, improving the overall documentation experience.

--- a/docs/后端开发/认证授权/token、jwt、oauth2、session.mdx
+++ b/docs/后端开发/认证授权/token、jwt、oauth2、session.mdx
@@ -1,7 +1,11 @@
+---
+title: "Token JWT OAuth2 Session详解"
+---
+
 ### 什么是认证（Authentication）
 
 
-+ 通俗地讲就是**验证当前用户的身份**，证明“你是你自己”（比如：你每天上下班打卡，都需要通过指纹打卡，当你的指纹和系统里录入的指纹相匹配时，就打卡成功）
++ 通俗地讲就是**验证当前用户的身份**，证明"你是你自己"（比如：你每天上下班打卡，都需要通过指纹打卡，当你的指纹和系统里录入的指纹相匹配时，就打卡成功）
 + 互联网中的认证：
     - 用户名密码登录
     - 邮箱发送登录链接
@@ -231,7 +235,7 @@ http://www.example.com/user?token=xxx
 ### 常见的加密算法
 ![](https://cdn.nlark.com/yuque/0/2020/png/283679/1600662781325-2ca7e964-ec81-4f42-9b37-477c4fc29e3a.png)
 
-+ 哈希算法(Hash Algorithm)又称散列算法、散列函数、哈希函数，是一种从任何一种数据中创建小的数字“指纹”的方法。哈希算法将数据重新打乱混合，重新创建一个哈希值。
++ 哈希算法(Hash Algorithm)又称散列算法、散列函数、哈希函数，是一种从任何一种数据中创建小的数字"指纹"的方法。哈希算法将数据重新打乱混合，重新创建一个哈希值。
 + 哈希算法主要用来保障数据真实性(即完整性)，即发信人将原始消息和哈希值一起发送，收信人通过相同的哈希函数来校验原始数据是否真实。
 + 哈希算法通常有以下几个特点：
     - 正像快速：原始数据可以快速计算出哈希值
