--- a/docs/backend/auth-authorization/get-current-user.mdx
+++ b/docs/backend/auth-authorization/get-current-user.mdx
@@ -17,6 +17,7 @@ public PigUser getUser(Authentication authentication) {
 ```
 
 ## 前端获取当前用户
+
 ```typescript
 import { useUserInfo } from '/@/stores/userInfo';
 
@@ -30,5 +31,5 @@ const user = useUserInfo().userInfos.user
 </Warning>
 
 ## 问题咨询
-![](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
 
+如有问题，请通过官方渠道咨询。
