--- a/docs/backend/auth-authorization/inner-annotation.mdx
+++ b/docs/backend/auth-authorization/inner-annotation.mdx
@@ -1,9 +1,6 @@
 ---
-title: "Inner 的诞生"
+title: "Inner 注解的作用"
 ---
-
-# Inner 的诞生
-
 
 Pig 中 Url 的访问大致分为两种，一种是由 Gateway 网关从外网路由进来，一种是内网通过 Feign 进行内部服务调用。那我们结合 Security 就存在以下几种应用场景：
 
