--- a/docs/backend/auth-authorization/pig-token-expiration.mdx
+++ b/docs/backend/auth-authorization/pig-token-expiration.mdx
@@ -1,40 +1,35 @@
 ---
-title: "pig token 有效期及个性化"
+title: "Token 有效期及个性化"
 ---
 
-## ① 默认 Token 有效期说明
-
+## 默认 Token 有效期说明
 
 ```plain
- // 默认刷新 token 的有效期
-  private int refreshTokenValiditySeconds = 60 * 60 * 24 * 30; // default 30 days.
-  // 默认 token 的有效期
-  private int accessTokenValiditySeconds = 60 * 60 * 12; // default 12 hours.
+// 默认刷新 token 的有效期
+private int refreshTokenValiditySeconds = 60 * 60 * 24 * 30; // default 30 days.
+// 默认 token 的有效期
+private int accessTokenValiditySeconds = 60 * 60 * 12; // default 12 hours.
 ```
 
+## 修改 Token 有效期
 
-
-## ② 修改 Token 有效期
-:::info
+<Note>
 每个终端配置为空，取默认的时间设置 刷新 token 30 天，令牌 12 小时。
 
 前端使用的客户端是 pig，设置令牌失效等。
+</Note>
 
-:::
+![Token配置](https://cdn.nlark.com/yuque/0/2020/png/283679/1599314159653-f0977281-a56c-4ddf-bd2f-001db5f387b6.png)
 
-![](https://cdn.nlark.com/yuque/0/2020/png/283679/1599314159653-f0977281-a56c-4ddf-bd2f-001db5f387b6.png)
+## sys_oauth_client_details 表
 
-
-
-## 🌋 sys_oauth_client_details 表
-:::warning
+<Warning>
 终端管理功能对应 sys_oauth_client_details 表，为认证授权的核心控制表
-
-:::
+</Warning>
 
 | 字段名称 | 描述 |
 | --- | --- |
-| client_id	 | 主键，客户端 ID |
+| client_id | 主键，客户端 ID |
 | resource_ids | 客户端所能访问的资源 id 集合，多个资源时用逗号 (,) 分隔 |
 | client_secret | 客户端访问密匙 |
 | scope | 客户端申请的权限范围，可选值包括 read,write,trust;若有多个权限范围用逗号 (,) 分隔 |
@@ -44,9 +39,9 @@ title: "pig token 有效期及个性化"
 | access_token_validity | 设定客户端的 access_token 的有效时间值 (单位：秒)，若不设定值则使用默认的有效时间值 (60 * 60 * 12, 12 小时) |
 | refresh_token_validity | 设定客户端的 refresh_token 的有效时间值 (单位：秒)，若不设定值则使用默认的有效时间值 (60 * 60 * 24 * 30, 30 天) |
 | additional_information | 这是一个预留的字段，在 Oauth 的流程中没有实际的使用，可选，但若设置值，必须是 JSON 格式的数据 |
-| autoapprove | 设置用户是否自动批准授予权限操作，默认值为‘false’, 可选值包括‘true’,‘false’, ‘read’,‘write’. |
+| autoapprove | 设置用户是否自动批准授予权限操作，默认值为 'false', 可选值包括 'true','false', 'read','write'. |
 
+## 问题咨询
 
-## ❤  问题咨询
-![](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+如有问题，请通过官方渠道咨询。
 
