--- a/docs/dev/microservice-config-management.mdx
+++ b/docs/dev/microservice-config-management.mdx
@@ -1,32 +1,21 @@
 ---
-title: "微调微服务配置管理"
+title: "微服务配置管理"
 ---
 
 ## Nacos 配置管理
 
-
-访问  `http://pig-register:8848/nacos`
-
-
+访问 `http://pig-register:8848/nacos`
 
 ## 新增配置文件
 
-
-:::warning
-+ **<font style="color:#E8323C;">1. dataId 必须为  微服务名称-dev.yml（例如 demo-biz-dev.yml）</font>**
-+ **<font style="color:#E8323C;">2. 配置类型 必须选择 yaml</font>**
-
-:::
-
-
+<Warning>
+1. dataId 必须为 微服务名称-dev.yml（例如 demo-biz-dev.yml）
+2. 配置类型 必须选择 yaml
+</Warning>
 
 ![](https://cdn.nlark.com/yuque/0/2020/png/283679/1599233245468-0fb3e17c-e58f-47b9-a443-42eb7b8ef928.png)
 
-
-
-+ 将 **完成微服务增删改查章节** 新增的配置 **剪切**到配置中心即可
-
-
+将 **完成微服务增删改查章节** 新增的配置 **剪切**到配置中心即可
 
 ```yaml
 spring:
@@ -36,16 +25,13 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://pig-mysql:3306/pig_demo?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
-
 ```
 
+<Warning>
+重启 demo 模块
+</Warning>
 
+## 问题咨询
 
-:::warning
-**<font style="color:#F5222D;">重启 demo 模块</font>**
-
-:::
-
-## ❤  问题咨询
 ![](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
 
